test/corpus/comments.txt
======================
single line comment
======================
// hello
//world
---
(source_file
 (comment)
 (comment))

======================
inline comment
======================
a random statement // hello
---
(source_file
 (identifier)
 (identifier)
 (identifier)
 (comment))
