test/corpus/declaration.txt
======================
variable declration
======================
let b = let x = 3
let x = [1, 2]
---
(source_file
 (variable_declaration
  (identifier)
  (variable_declaration
   (identifier)
   (number)))
 (variable_declaration
  (identifier)
  (array
   (number)
   (number))))

======================
function declration
======================
fn a() {_}
fn x(a,b) {
  let sum = a + b
  print(sum)
}
---
(source_file
 (function_declaration
  (function_name)
  (parameter_list)
  (function_body
   (identifier)))
 (function_declaration
  (function_name)
  (parameter_list
   (identifier)
   (identifier))
  (function_body
   (variable_declaration
    (identifier)
    (binary_expression
     (identifier)
     (identifier)))
   (call
    (identifier)
    (argument_list
     (identifier))))))


======================
variable assignment
======================
let a = 1
a = a + 1
a = b = 9
---
(source_file
 (variable_declaration
  (identifier)
  (number))
 (assignment
  (identifier)
  (binary_expression
   (identifier)
   (number)))
 (assignment
  (identifier)
  (assignment
   (identifier)
   (number))))
