test/corpus/primary.txt
============================
number
============================
123
0123
-123
0.1
123.45
-2.1
---
(source_file
 (number)
 (number)
 (number)
 (number)
 (number)
 (number))


==========================
identifier
==========================
asdf
_foo
bar11
11aa
// ^ this surprisingly will be parsed as (number)(identifier)
---
(source_file
 (identifier)
 (identifier)
 (identifier)
 (number)
 (identifier)
 (comment))


==========================
string
==========================
"foo"
"escape\n"
"hello\t\"\nbye"
---
(source_file
 (string
  (string_fragment))
 (string
  (string_fragment)
  (escape_sequence))
 (string
  (string_fragment)
  (escape_sequence)
  (escape_sequence)
  (escape_sequence)
  (string_fragment)))

==========================
boolean
==========================
true false
truefalse
---
(source_file
 (boolean)
 (boolean)
 (identifier))

==========================
nil
==========================
nil 1nil xnil
---
(source_file
 (nil)
 (number)
 (nil)
 (identifier))
